fix button alignment issue

--- a/static/css/inputs.css
+++ b/static/css/inputs.css
@@ -21,8 +21,12 @@ label {
   color: var(--color-gray-100);
 }
 
+.grid-input-div {
+  display: grid;
+  column-gap: 2em;
+}
+
 .grid-input-div button {
-  margin-top: 1.5em;
   width: 100%;
   height: 50px;
   padding: 8px 4px;
@@ -82,11 +86,6 @@ label {
 
 .measurement-unit {
   margin-left: -100%;
-}
-
-.grid-input-div {
-  display: grid;
-  column-gap: 2em;
 }
 
 .checkbox-input-div {
